@@ -194,7 +194,7 @@ proc ::Plotchart::DrawYaxis { w ymin ymax ydelt args} {
             $w create line $xcrd2 $ycrd $xcrd $ycrd -tag [list yaxis $w] -fill $linecolor
 
             if { $config($w,leftaxis,shownumbers) } {
-                $w create text $xcrd3 $ycrd -text $ylabel -tag [list yaxis $w] -anchor e \
+                $w create text $xcrd3 $ycrd -text $ylabel -tag [list yaxis $w label] -anchor e \
                     -fill $textcolor -font $textfont
             }
 
@@ -337,7 +337,7 @@ proc ::Plotchart::DrawRightaxis { w ymin ymax ydelt args } {
             $w create line $xcrd2 $ycrd $xcrd $ycrd -tag [list raxis $w] -fill $linecolor
 
             if { $config($w,leftaxis,shownumbers) } {
-                $w create text $xcrd3 $ycrd -text $ylabel -tag [list raxis $w] -anchor w \
+                $w create text $xcrd3 $ycrd -text $ylabel -tag [list raxis $w label] -anchor w \
                     -fill $textcolor -font $textfont
             }
 
@@ -580,7 +580,7 @@ proc ::Plotchart::DrawXaxis { w xmin xmax xdelt args } {
             $w create line $xcrd $ycrd2 $xcrd $ycrd -tag [list xaxis $w] -fill $linecolor
 
             if { $config($w,bottomaxis,shownumbers) } {
-                $w create text $xcrd $ycrd3 -text $xlabel -tag [list xaxis $w] -anchor n \
+                $w create text $xcrd $ycrd3 -text $xlabel -tag [list xaxis $w label] -anchor n \
                      -fill $textcolor -font $textfont
             }
 
@@ -2058,4 +2058,75 @@ proc ::Plotchart::DrawRoseAxes { w rad_max rad_step } {
 
         set rad [expr {$rad+$rad_step}]
     }
+}
+
+# MoveAxesToZero --
+#     Move the axes to the origin of the plot if applicable
+# Arguments:
+#     w           Name of the canvas
+#     xmin        Minimum x coordinate
+#     xmax        Maximum x coordinate
+#     ymin        Minimum y coordinate
+#     ymax        Maximum y coordinate
+# Result:
+#     None
+# Side effects:
+#     Axles and axis labels moved
+#
+proc ::Plotchart::MoveAxesToZero { w xmin xmax ymin ymax } {
+
+    #
+    # Check that the move is possible
+    #
+    set movex 0
+    set movey 0
+    if { $xmin < 0.0 && $xmax > 0.0 } {
+        set movey 1 ;# Note: this is correct!
+    }
+    if { $xmin > 0.0 && $xmax < 0.0 } {
+        set movey 1
+    }
+    if { $ymin < 0.0 && $ymax > 0.0 } {
+        set movex 1
+    }
+    if { $ymin > 0.0 && $ymax < 0.0 } {
+        set movex 1
+    }
+
+    #
+    # First move the axle and labels
+    #
+    lassign [coordsToPixel $w $xmin $ymin] x1 y1
+    lassign [coordsToPixel $w 0.0   0.0  ] x2 y2
+
+    if { $movex } {
+        $w move "xaxis && $w" 0 [expr {$y2 - $y1}]
+    }
+    if { $movey } {
+        $w move "yaxis && $w" [expr {$x2 - $x1}] 0
+    }
+
+    #
+    # Then move the labels at the axes
+    #
+    # First the x-axis
+    #
+    if { $movex } {
+        foreach id [$w find withtag "xaxis && $w && label"] {
+            lassign [$w coords $id] x y
+            if { $x > $x2-10 && $x < $x2+10 && $y > $y2-10 && $y < $y2+10 } {
+                $w itemconfigure $id -anchor ne
+                $w move $id -3 0
+            }
+        }
+    }
+    if { $movey } {
+        foreach id [$w find withtag "yaxis && $w && label"] {
+            lassign [$w coords $id] x y
+            if { $x > $x2-10 && $x < $x2+10 && $y > $y2-10 && $y < $y2+10 } {
+                $w itemconfigure $id -anchor se
+            }
+        }
+    }
+
 }
